--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row">
-    <div class="container">
+    <div class="container loginRegPage">
         <div class="row">
             <form method="POST" action="{{url_for('login')}}"class="login-form col s12">
                 <h3>Welcome! Please login.</h3>
