--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
                     <i class="material-icons">send</i>
                 </button>
                 <div class="container">
-                    <p class="center-align">Already have an account? <a href="{{url_for('login')}}">Sign in</a>.</p>
+                    <p class="center-align">Already have an account?<a href="{{url_for('index')}}"> Sign in</a>.</p>
                 </div>
             </form>
         </div>
