--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,24 @@
+/* .loginRegPage{
+    background-image: url("https://live.staticflickr.com/6017/5961260280_f38d3cbee9_b.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+} */
+
+#landingPageHeader{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.indexWrapper{
+    display: flex;
+    height: 100vh;
+    background-image: url("https://live.staticflickr.com/6017/5961260280_f38d3cbee9_b.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 .profit-box{
     border: solid 0.5px;
