--- a/templates/add_to.html
+++ b/templates/add_to.html
@@ -23,14 +23,14 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">info</i>
-                    <input id="amount" name="amount" type="number" placeholder="{{bag.amount}}" class="validate" required>
+                    <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="{{bag.amount}}" class="validate" required>
                     <label>Add new amoumt to {{bag.asset}}</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">monetization_on</i>
-                    <input type="number" id="price_paid" name="price_paid" placeholder="{{bag.price_paid}}" class="validate" required>
+                    <input type="number" id="price_paid" name="price_paid" min="0" step="0.001" placeholder="{{bag.price_paid}}" class="validate" required>
                     <label>Price per unit at purchase</label>
                 </div>
             </div>
