--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<table id="myCoinTable">
+<table class="responsive-table striped" id="myCoinTable">
   <thead>
     <tr>
       <th>Rank</th>
