--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+<h3 class="center-align"><em>Track your crypto portfolio</em></h3>
 <div class="row">
-    <div class="container loginRegPage">
+    <div class="container loginPage">
         <div class="row">
             <form method="POST" action="{{url_for('login')}}"class="login-form col s12">
                 <h3>Welcome! Please login.</h3>
