--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,23 +1,14 @@
-/* .loginRegPage{
-    background-image: url("https://live.staticflickr.com/6017/5961260280_f38d3cbee9_b.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-} */
-
-#landingPageHeader{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.loginPage {
+    margin-top: 50px;
 }
 
-.indexWrapper{
-    display: flex;
-    height: 100vh;
-    background-image: url("https://live.staticflickr.com/6017/5961260280_f38d3cbee9_b.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
+nav .brand-logo {
+    font-size: 1.3em;
+    margin-left: 10px;
+}
+
+#mybagTable{
+    margin-top: 50px;
 }
 
 .profit-box{
