--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,21 @@
+
+.bg-image{
+    height: 100vh;
+    width: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-image: url("/static/images/bg-image.jpg");
+     /* image by VectorStock / Dimasic50 */
+}
+
 .loginPage {
     margin-top: 50px;
+
+}
+nav{
+    background-color: #6e75ee;
 }
 
 nav .brand-logo {
@@ -7,9 +23,6 @@ nav .brand-logo {
     margin-left: 10px;
 }
 
-#mybagTable{
-    margin-top: 50px;
-}
 
 .profit-box{
     border: solid 0.5px;
@@ -28,4 +41,19 @@ nav .brand-logo {
     flex-direction: column;
     align-items: center;
 }
+
+/* Media queries */
+@media only screen and (max-width: 1063px){
+    .bg-image{
+        height: 100vh;
+        width: 100%;
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-image: url("/static/images/bg-image.jpg");
+         /* image by VectorStock / Dimasic50 */
+    }
+}
+
 
