--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {%block content%}
 <div class="container">
+    <h3 class="center-align">Your Crypto Holdings</h3>
+</div>
+<div class="container">
     <div class="row">
         <table id="mybagTable" class="responsive-table striped">
             <thead>
@@ -45,19 +48,22 @@
                     {% endif %}
                     {% endfor %}
                     <td><a href="{{url_for('edit_bag', username = session['username'], bag_id=pos._id)}}"
-                            class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a>
+                            class="btn-floating btn-small waves-effect waves-light blue"><i
+                                class="material-icons">edit</i></a>
                     </td>
                     <td><a href="{{url_for('add_to_bag', username = session['username'], bag_id=pos._id)}}"
-                            class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">add</i></a>
+                            class="btn-floating btn-small waves-effect waves-light blue"><i
+                                class="material-icons">add</i></a>
                     </td>
                     </td>
                     <td><a href="{{url_for('delete_bag',username = session['username'], bag_id=pos._id)}}"
-                            class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a>
+                            class="btn-floating btn-small waves-effect waves-light red"><i
+                                class="material-icons">delete</i></a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
-        
+
         </table>
     </div>
 </div>
