added favicon and added missing styles to register page

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="{{url_for('static', filename='images/favicon.jpg')}}"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Chartist.js CDN -->
@@ -11,7 +12,7 @@
     <!-- https://datatables.net/cdn for sorting coin list -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Website</title>
+    <title>Digi Market Cap</title>
 </head>
 <header>
     <nav class="sidenav-trigger">
