--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
                             <h3>Welcome! Please login.</h3>
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input placeholder="Username" name="username" id="first_name" type="text" class="validate">
+                                    <input placeholder="Username" name="username" id="first_name" type="text"
+                                        class="validate">
                                     <label for="first_name">Username</label>
                                 </div>
                             </div>
@@ -32,7 +33,7 @@
                     </div>
                 </div>
             </div>
-    </div>
+        </div>
     </div>
 </div>
 
