--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,7 @@ nav .brand-logo {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 /* Media queries */
