--- a/templates/register.html
+++ b/templates/register.html
@@ -1,30 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
+<div class="bg-image">
     <div class="container">
         <div class="row">
-            <form method="POST" action="{{url_for('register')}}" class="login-form col s12">
-                <h3>Welcome! Please create an account.</h3>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input placeholder="Username" name="username" type="text" class="validate">
-                        <label for="username">Username</label>
+            <div class="container col s12">
+                <h3 class="center-align"><em>Track your crypto portfolio</em></h3>
+                <div class="container loginPage">
+                    <div class="row">
+                        <form method="POST" action="{{url_for('register')}}" class="login-form col s12">
+                            <h3>Welcome! Please create an account.</h3>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input placeholder="Username" name="username" id="first_name" type="text"
+                                        class="validate">
+                                    <label for="first_name">Username</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="password" name="password" type="password" class="validate">
+                                    <label for="password">Password</label>
+                                </div>
+                            </div>
+                            <button class="btn-floating waves-effect waves-light" type="submit">
+                                <i class="material-icons">send</i>
+                            </button>
+                            <div class="container signin">
+                                <p class="center-align">Already have an account?<a href="{{url_for('index')}}"> Sign in</a>.</p>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" name="password" type="password" class="validate">
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <button class="btn-floating waves-effect waves-light" type="submit">
-                    <i class="material-icons">send</i>
-                </button>
-                <div class="container">
-                    <p class="center-align">Already have an account?<a href="{{url_for('index')}}"> Sign in</a>.</p>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
