--- a/templates/add_to.html
+++ b/templates/add_to.html
@@ -1,51 +1,58 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>Holding for {{bag.asset}}</h3>
-<div class="row">
-    <form action="{{url_for('adding_to_bag', username = session['username'], bag_id=bag_id, bag=bag)}}" method="POST" class="col s12">
-        <div class="row">
+<div class="container">
+    <h3>Holding for {{bag.asset}}</h3>
+</div>
+<div class="container">
+    <div class="row">
+        <form action="{{url_for('adding_to_bag', username = session['username'], bag_id=bag_id, bag=bag)}}"
+            method="POST" class="col s12">
             <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">control_point</i>
-                    <select id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate" disabled>
-                        <label>Edit a coin</label>
-                        {% for coin in data %}
-                        {% if bag.asset == coin.symbol %}
-                        <option value="{{bag.asset}}"selected >{{coin.symbol}}</option>
-                        {% else %}
-                        <option>{{coin.symbol}}</option>
-                        {% endif %}
-                        {% endfor %}
-                    </select>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">control_point</i>
+                        <select id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate" disabled>
+                            <label>Edit a coin</label>
+                            {% for coin in data %}
+                            {% if bag.asset == coin.symbol %}
+                            <option value="{{bag.asset}}" selected>{{coin.symbol}}</option>
+                            {% else %}
+                            <option>{{coin.symbol}}</option>
+                            {% endif %}
+                            {% endfor %}
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">info</i>
-                    <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="{{bag.amount}}" class="validate" required>
-                    <label>Add new amoumt to {{bag.asset}}</label>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">info</i>
+                        <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="{{bag.amount}}"
+                            class="validate" required>
+                        <label>Add new amoumt to {{bag.asset}}</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">monetization_on</i>
-                    <input type="number" id="price_paid" name="price_paid" min="0" step="0.001" placeholder="{{bag.price_paid}}" class="validate" required>
-                    <label>Price per unit at purchase</label>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">monetization_on</i>
+                        <input type="number" id="price_paid" name="price_paid" min="0" step="0.001"
+                            placeholder="{{bag.price_paid}}" class="validate" required>
+                        <label>Price per unit at purchase</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">date_range</i>
-                    <input id="date_of_purchase" name="date_of_purchase" type="text" value="{{bag.date_of_purchase}}"
-                        class="datepicker">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">date_range</i>
+                        <input id="date_of_purchase" name="date_of_purchase" type="text"
+                            value="{{bag.date_of_purchase}}" class="datepicker">
                         <label>Optional</label>
+                    </div>
                 </div>
+                <button class="btn-floating waves-effect waves-light" type="submit">
+                    <i class="material-icons">send</i>
+                </button>
             </div>
-            <button class="btn-floating waves-effect waves-light" type="submit">
-                <i class="material-icons">send</i>
-            </button>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
 {% endblock %}
