--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -24,7 +24,7 @@
       </tr>
     </thead>
 
-    <tbody>
+    <tbody class="coin_body">
       {% for coin in data %}
       <tr>
         <td class="center-align">{{loop.index}}</td>
