--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/jpg" href="{{url_for('static', filename='images/favicon.jpg')}}"/>
+    <link rel="shortcut icon" type="image/jpg" href="{{url_for('static', filename='images/favicon.jpg')}}" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Chartist.js CDN -->
@@ -14,33 +14,20 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <title>Digi Market Cap</title>
 </head>
-<header>
-    <nav class="sidenav-trigger">
-        <div class="nav-wrapper">
 
-            <a href="{{url_for('coin_list', username = session['username'])}}" class="brand-logo"> <strong>Digi Market
-                    Cap</strong></a>
-            <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{url_for('coin_list', username = session['username'])}}">Coin List</a></li>
-                <li><a href="{{url_for('get_my_bagz', username = session['username'])}}">My Crypto</a></li>
-                <li><a href="{{url_for('create_a_bag', username = session['username'])}}">Add a Crypto</a></li>
-                <li><a href="{{url_for('logout', username = session['username'])}}">Logout</a></li>
-            </ul>
-        </div>
-    </nav>
-    <ul class="sidenav" id="mobile-menu">
-        <li><a href="{{url_for('coin_list', username = session['username'])}}">Coin List</a></li>
-        <li><a href="{{url_for('get_my_bagz', username = session['username'])}}">My Crypto</a></li>
-        <li><a href="{{url_for('create_a_bag', username = session['username'])}}">Add a Crypto</a></li>
-        <li><a href="{{url_for('logout', username = session['username'])}}">Logout</a></li>
-    </ul>
-</header>
 
 <body>
-        {% block content %}
-        {% endblock %}
+    {% block content %}
+    {% endblock %}
+
+    <footer class="page-footer">
+        <div class="footer-copyright">
+            <div class="container s12">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous">
