--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+{% include 'header.html' %}
 {% block content %}
+
 <div class="container">
   <h3 class="center-align">Top 200 Cryptos By Market Capitalization</h3>
   <div class="global_stats">
