--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% include 'header.html' %}
 {% block content %}
 <div class="container">
   <h3 class="center-align">Create a Crypto Holding</h3>
