--- a/templates/add_to.html
+++ b/templates/add_to.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% include 'header.html' %}
 {% block content %}
 <div class="container">
     <h3>Holding for {{bag.asset}}</h3>
