--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% include 'header.html' %}
 {%block content%}
 <div class="container">
     <h3 class="center-align">Your Crypto Holdings</h3>
